--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-open-doodles": "^1.0.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "react-toastify": "^7.0.3",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4",
     "yarn": "^1.22.10"
