--- a/client/package.json
+++ b/client/package.json
@@ -15,9 +15,11 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
+    "react-modal": "^3.13.1",
     "react-open-doodles": "^1.0.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "react-table": "^7.6.3",
     "react-toastify": "^7.0.3",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4",
