--- a/client/package.json
+++ b/client/package.json
@@ -7,20 +7,17 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.15.2",
     "axios": "^0.21.1",
     "jsonwebtoken": "^8.5.1",
-    "mobx": "^6.0.4",
-    "mobx-react": "^7.0.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
-    "react-modal": "^3.13.1",
     "react-open-doodles": "^1.0.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "react-table": "^7.6.3",
-    "react-toastify": "^7.0.3",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4",
     "yarn": "^1.22.10"
