--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
+    "react-loader-spinner": "^4.0.0",
     "react-open-doodles": "^1.0.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
